--- a/docs/hw_1_multitask_counting_student.ipynb
+++ b/docs/hw_1_multitask_counting_student.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -11,7 +12,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -263,29 +265,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yUmggC-uvcGR",
-        "outputId": "1db31921-3fe4-4f20-eb19-e6cff0920faf"
+        "outputId": "f493c9ae-f72a-4c82-ee70-a2a0a213f3a8"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-10-21 13:07:32--  https://github.com/marcin119a/data/raw/refs/heads/main/data_gsn.zip\n",
-            "Resolving github.com (github.com)... 140.82.112.4\n",
-            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
+            "--2025-11-21 17:48:42--  https://github.com/marcin119a/data/raw/refs/heads/main/data_gsn.zip\n",
+            "Resolving github.com (github.com)... 140.82.116.3\n",
+            "Connecting to github.com (github.com)|140.82.116.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/marcin119a/data/refs/heads/main/data_gsn.zip [following]\n",
-            "--2025-10-21 13:07:33--  https://raw.githubusercontent.com/marcin119a/data/refs/heads/main/data_gsn.zip\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2025-11-21 17:48:42--  https://raw.githubusercontent.com/marcin119a/data/refs/heads/main/data_gsn.zip\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 5544261 (5.3M) [application/zip]\n",
             "Saving to: ‘data_gsn.zip’\n",
             "\n",
-            "data_gsn.zip        100%[===================>]   5.29M  --.-KB/s    in 0.08s   \n",
+            "data_gsn.zip        100%[===================>]   5.29M  --.-KB/s    in 0.05s   \n",
             "\n",
-            "2025-10-21 13:07:33 (69.6 MB/s) - ‘data_gsn.zip’ saved [5544261/5544261]\n",
+            "2025-11-21 17:48:43 (116 MB/s) - ‘data_gsn.zip’ saved [5544261/5544261]\n",
             "\n"
           ]
         }
@@ -293,12 +295,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import os\n",
+        "import random\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "import torch.nn.functional as F\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "from torchvision import transforms\n",
+        "from PIL import Image\n",
+        "from sklearn.metrics import f1_score, mean_squared_error, mean_absolute_error\n",
+        "\n",
+        "# Set random seeds for reproducibility\n",
+        "def set_seed(seed=1):\n",
+        "    random.seed(seed)\n",
+        "    np.random.seed(seed)\n",
+        "    torch.manual_seed(seed)\n",
+        "    if torch.cuda.is_available():\n",
+        "        torch.cuda.manual_seed_all(seed)\n",
+        "\n",
+        "set_seed(1)\n",
+        "\n",
+        "# Device configuration\n",
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "print(f\"Using device: {device}\")"
+      ],
       "metadata": {
-        "id": "Noooak7Y18Bx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LqysQdcthhTy",
+        "outputId": "0fa79b40-e4f7-4b52-e0c3-f67783695118"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Using device: cuda\n"
+          ]
+        }
+      ]
     }
   ]
 }
